# worktrees

./: .gitignore  README.md  main.py  pyproject.toml  worktrees  wt.sh
docs/: CONTRIBUTING.md  cli.md  configuration.md  development.md
src/worktrees/: __init__.py  __main__.py  config.py  exclusions.py  git.py  user_config.py
src/worktrees/cli/: __init__.py  advanced.py  config_cmd.py  init_clone.py  mark.py  status.py  tmux.py  worktree.py
tests/: __init__.py  test_cli_advanced.py  test_cli_config.py  test_cli_init.py  test_cli_mark.py  test_cli_status.py  test_cli_tmux.py  test_cli_worktree_add.py  test_cli_worktree_remove.py  test_config.py  test_exclusions.py  test_git.py  test_git_worktrees.py  test_user_config.py
